--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "fuse.js": "^3.4.6",
     "http-errors": "~1.6.3",
+    "jsonfile": "^6.0.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
